Fix table overflow by just targeting first column as that tends to have the most information.

--- a/less/shoelacecustom.less
+++ b/less/shoelacecustom.less
@@ -36,8 +36,7 @@
 
 // Attempt to solve overflowing table issue: https://moodle.org/mod/forum/discuss.php?d=279883 - related to: https://moodle.org/mod/forum/discuss.php?d=274915 - which might be too - code comes from: https://github.com/gjb2048/moodle-theme_shoehorn/issues/5
 table {
-    th, td {
-        padding-left: 20px;
+    th:first-child, td:first-child {
         word-break: break-word;
         word-wrap: break-word;
     }
